Added crawler instance to post request

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -13,12 +13,12 @@
 
 	        <tr>
 				<td>Perform full TCP port scan</td>
-				<td> <input type="checkbox" name="checkBoxTCP"></td>
+				<td> <input type="checkbox" name="checkBoxTCPPortScan"></td>
 	        </tr>
 
 			<tr>
 				<td>disrespect robots.txt</td>
-	          	<td> <input type="checkbox" name="checkBoxRobots"></td>
+	          	<td> <input type="checkbox" name="checkBoxIgnoreRobots"></td>
 	        </tr>
 
 	        <tr>
