Singleton problem does not persist

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,7 +4,7 @@
 
 
 <div>
-	<form action="/results.html" method="POST" onsubmit="try {return window.confirm(&quot;You are submitting information to an external page.\nAre you sure?&quot;);} catch (e) {return false;}">
+	<form action="/execResults.html" method="POST" onsubmit="try {return window.confirm(&quot;You are submitting information to an external page.\nAre you sure?&quot;);} catch (e) {return false;}">
 	    <table border="0">
 	        <tbody><tr>
 	        	<td>Domain:</td>
