--- a/static/html/index.html
+++ b/static/html/index.html
@@ -14,8 +14,13 @@
 	        </tr>
 
 			<tr>
-				<td>disrespect robots.txt</td>
+				<td>Disrespect robots.txt</td>
 	          	<td> <input type="checkbox" name="checkBoxIgnoreRobots"></td>
+	        </tr>
+
+			<tr>
+				<td>Send as Http/1.1</td>
+	          	<td> <input type="checkbox" name="checkBoxShouldUseChunked"></td>
 	        </tr>
 
 	        <tr>
@@ -29,7 +34,7 @@
 
 <div>
 <h1>Older crawled files</h1>
-<a href="/crawled_results/www.google.com_20160202_185824.html">www.google.com_20160202_185824.html</a>
+<a href="/crawled_results/www.google.com_20160202_190052.html">www.google.com_20160202_190052.html</a>
 <br>
 
 </div>
