--- a/static/html/index.html
+++ b/static/html/index.html
@@ -29,7 +29,7 @@
 
 <div>
 <h1>Older crawled files</h1>
-<a href="/crawled_results/www.google.com_20160202_185824.html">www.google.com_20160202_185824.html</a>
+<a href="/crawler_results/www.google.com_20160202_195950.html">www.google.com-20160202-195950</a><br>
 <br>
 
 </div>
