--- a/static/html/index.html
+++ b/static/html/index.html
@@ -25,7 +25,7 @@
 
 	        <tr>
 	        	<td></td>
-				<td><input type="submit" value="Start crawler"></td>
+				<td><input id="submitButton" type="submit" value="Start crawler"></td>
 	        </tr>
 	    </tbody></table>
   	</form>
@@ -34,6 +34,8 @@
 
 <div>
 <h1>Older crawled files</h1>
+<a href="/crawler_results/www.google.com_20160202_201454.html">www.google.com_20160202_201454.html</a><br>
+<a href="/crawler_results/www.google.com_20160202_201455.html">www.google.com_20160202_201455.html</a><br>
 <a href="/crawled_results/www.google.com_20160202_190052.html">www.google.com_20160202_190052.html</a>
 <br>
 
