Added email services option

--- a/static/html/crawler_failed_bad_hostname.html
+++ b/static/html/crawler_failed_bad_hostname.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div>
-		<h1>Crawler failed to run because the given hostname does not exist, or was not found</h1>
+		<h1>Crawler failed to start because: the given hostname does not exist, or was not found</h1>
 		<br>
 		<a href="/">Main page</a>
 	</div>
