--- a/static/html/crawler_failed_empty_hostname.html
+++ b/static/html/crawler_failed_empty_hostname.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div>
-		<h1>Crawler failed to run because the given hostname was empty</h1>
+		<h1>Crawler failed to start because: the given hostname was empty</h1>
 		<br>
 		<a href="/">Main page</a>
 	</div>
