--- a/static/html/index.html
+++ b/static/html/index.html
@@ -24,9 +24,20 @@
 	        </tr>
 
 	        <tr>
+	        	<td>Please enter your email address:</td>
+				<td> <input type="textbox" name="textBoxEmail"></td>
+	        </tr>
+
+	        <tr>
+	        	<td></td>
+	        	<td style="color:#040404">If you leave this empty, nothing will be sent to you</td>
+	        </tr>
+
+			<tr>
 	        	<td></td>
 				<td><input id="submitButton" type="submit" value="Start crawler"></td>
 	        </tr>
+
 	    </tbody></table>
   	</form>
 
@@ -34,6 +45,7 @@
 
 <div>
 <h1>Older crawled files</h1>
+<a href="/crawler_results/www.play-hookey.com_20160205_150107.html">www.play-hookey.com-20160205-150107</a><br>
 <br>
 
 </div>
