Added history of pages to success and failed pages

--- a/static/html/crawler_failed_bad_hostname.html
+++ b/static/html/crawler_failed_bad_hostname.html
@@ -11,5 +11,12 @@
 		<br>
 		<a href="/">Main page</a>
 	</div>
+	
+	<div>
+		<h1>Older crawled files</h1>
+<a href="/crawler_results/arielverber.com_20160207_101021.html">arielverber.com-20160207-101021</a><br>
+<a href="/crawler_results/www.play-hookey.com_20160207_100813.html">www.play-hookey.com-20160207-100813</a><br>
+		<br>
+	</div>
 </body>
 </html>
