Refactored, added all necessary submission files

--- a/static/html/crawler_is_already_running.html
+++ b/static/html/crawler_is_already_running.html
@@ -10,5 +10,10 @@
 	<h1>Crawler is already running!!!</h1> <br>
 	<a href="/">Main page</a>
 
+	<div>
+		<h1>Older crawled files</h1>
+		<br>
+	</div>
+	
 </body>
 </html>
